# pyte

./: .editorconfig  .gitignore  .travis.yml  AUTHORS  CHANGES  CHANGES.rst  MANIFEST.in  README  README.rst  benchmark.py  full_benchmark.sh  pyproject.toml  requirements_dev.txt  runtests.py  setup.py  tox.ini
.github/workflows/: ci.yml
benchmarks/: generate.sh  htop-10s.txt
centos/: python26-pyte.spec
docs/: Makefile  api.rst  conf.py  examples.rst  index.rst  tutorial.rst
examples/: capture.py  debug.py  helloworld.py  history.py  inception.py  nanoterm.py  terminal_emulator.py  webrtcterm.py  webterm.py
examples/static/: base16-eighties-dark.css  index.html  webrtcterm.html  webrtcterm.js  webterm.js
js/: charsets.js  control.js  escape.js  graphics.js  helloworld.html  modes.js  screens.js  streams.js
pyte/: __init__.py  __main__.py  charsets.py  compat.py  control.py  escape.py  graphics.py  keyboard.py  modes.py  screens.py  streams.py  wcwidth.py
tests/: __init__.py  htop.input  htop.output  mc.input  mc.output  test_diff.py  test_history.py  test_input_output.py  test_screen.py  test_stream.py  top.output  vi.output
tests/captured/: cat-gpl3.output  emacs-tetris.output  find-etc.input  find-etc.output  htop.input  htop.output  ls.input  ls.output  mc.input  mc.output  top.input  top.output  vi.input  vi.output
tests/helpers/: asserts.py
